force-app/main/default/objects/IndividualApplication/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>