force-app/main/default/objects/IndividualApplication/fields/Project_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Project_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>