force-app/main/default/objects/IndividualApplication/fields/Proof_Relation_Attachment_Description__c.field-meta.xml
<CustomField>
    <fullName>Proof_Relation_Attachment_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proof Relation Attachment Description</label>
    <type>TextArea</type>
</CustomField>