force-app/main/default/objects/IndividualApplication/fields/Proof_Relationship_Attached__c.field-meta.xml
<CustomField>
    <fullName>Proof_Relationship_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof Relationship Attached</label>
    <type>Checkbox</type>
</CustomField>