force-app/main/default/objects/IndividualApplication/fields/Reasonable_Accommodation_Description__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_Accommodation_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reasonable Accommodation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>