force-app/main/default/objects/IndividualApplication/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Over Income</fullName>
            </value>
            <value>
                <fullName>Under Income</fullName>
            </value>
            <value>
                <fullName>No Units Available for Household Size</fullName>
            </value>
            <value>
                <fullName>Inconsistent/Unverifiable Household</fullName>
            </value>
            <value>
                <fullName>Failed Criminal Legal System Individualized Assessment</fullName>
            </value>
            <value>
                <fullName>Failed Credit Background Individualized Assessment</fullName>
            </value>
            <value>
                <fullName>Failure to Respond to Eligibility Appointment Letter</fullName>
            </value>
            <value>
                <fullName>Failure to Submit Documentation by Deadline Date</fullName>
                <label>Failure to Submit Documentation by Deadline date</label>
            </value>
            <value>
                <fullName>Self-Termination</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>