force-app/main/default/objects/IndividualApplication/fields/Reject_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reject Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>