force-app/main/default/objects/IndividualApplication/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>