force-app/main/default/objects/IndividualApplication/fields/Rejected_Since__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Since__c</fullName>
    <formula>TODAY() -  Rejected_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected Since</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>