force-app/main/default/objects/IndividualApplication/fields/RejectedCount__c.field-meta.xml
<CustomField>
    <fullName>RejectedCount__c</fullName>
    <label>RejectedCount</label>
    <summaryFilterItems>
        <field>WaitlistApplicant__c.Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>WaitlistApplicant__c.Individual_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>