force-app/main/default/objects/IndividualApplication/fields/Rental_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Rental_Subsidy__c</fullName>
    <label>Rental Subsidy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Section 8 Voucher</fullName>
            </value>
            <value>
                <fullName>Other Rental Subsidy/Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>