force-app/main/default/objects/IndividualApplication/fields/Run_Individual_Application_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Run_Individual_Application_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Individual Application Sharing</label>
    <type>Checkbox</type>
</CustomField>