force-app/main/default/objects/IndividualApplication/fields/Second_Preferred_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Second_Preferred_Unit_Type__c</fullName>
    <label>Second Preferred Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Types</valueSetName>
    </valueSet>
</CustomField>