force-app/main/default/objects/IndividualApplication/fields/Set_aside__c.field-meta.xml
<CustomField>
    <fullName>Set_aside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set aside</label>
    <type>Checkbox</type>
</CustomField>