force-app/main/default/objects/IndividualApplication/fields/Shareholder_Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Date_of_Death__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shareholder Date of Death</label>
    <type>Date</type>
</CustomField>