force-app/main/default/objects/IndividualApplication/fields/Shareholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shareholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>