force-app/main/default/objects/IndividualApplication/fields/Shareholder_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Record_Status__c</fullName>
    <label>Shareholder Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacated</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>