force-app/main/default/objects/IndividualApplication/fields/Shareholder_SSN__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_SSN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shareholder SSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>