force-app/main/default/objects/IndividualApplication/fields/Shareholder_Vacate_Date__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Vacate_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shareholder Vacate Date</label>
    <type>Date</type>
</CustomField>