force-app/main/default/objects/IndividualApplication/fields/Status_Prior_to_Move__c.field-meta.xml
<CustomField>
    <fullName>Status_Prior_to_Move__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Prior to Move</label>
    <length>100</length>
    <type>Text</type>
</CustomField>