force-app/main/default/objects/IndividualApplication/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Application Sub-Status will be dependent upon the Application Status</description>
    <inlineHelpText>Application Sub-Status will be dependent upon the Application Status</inlineHelpText>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Applicant Declined Unit</fullName>
            </value>
            <value>
                <fullName>Applicant Placed</fullName>
            </value>
            <value>
                <fullName>Applicant Withdrawal</fullName>
            </value>
            <value>
                <fullName>O/MA Rejection</fullName>
            </value>
            <value>
                <fullName>Over Income</fullName>
            </value>
            <value>
                <fullName>Under Income</fullName>
            </value>
            <value>
                <fullName>Documents Requested</fullName>
            </value>
            <value>
                <fullName>Additional Documents Requested</fullName>
            </value>
            <value>
                <fullName>No units available for household size</fullName>
            </value>
            <value>
                <fullName>Duplicate application</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Prioritization Request Approved</fullName>
            </value>
            <value>
                <fullName>Prioritization Request Rejected</fullName>
            </value>
            <value>
                <fullName>Ready to be offered unit</fullName>
            </value>
            <value>
                <fullName>Unit Accepted by Applicant</fullName>
            </value>
            <value>
                <fullName>Unit Rejected by Applicant</fullName>
            </value>
            <value>
                <fullName>Appeal Filed</fullName>
            </value>
            <value>
                <fullName>First Unit Rejected by Applicant</fullName>
            </value>
            <value>
                <fullName>Second Unit Rejected by Applicant</fullName>
            </value>
            <value>
                <fullName>Moved In</fullName>
            </value>
            <value>
                <fullName>Move Request Accepted</fullName>
            </value>
            <value>
                <fullName>Move Request Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>