force-app/main/default/objects/IndividualApplication/fields/Succession_Status__c.field-meta.xml
<CustomField>
    <fullName>Succession_Status__c</fullName>
    <description>Succession Status shows where the application succession status is at</description>
    <inlineHelpText>Succession Status shows where the application succession status is at</inlineHelpText>
    <label>Succession Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Succession Eligible</fullName>
            </value>
            <value>
                <fullName>Succession Disapproved</fullName>
            </value>
            <value>
                <fullName>Succession Approved</fullName>
            </value>
            <value>
                <fullName>Succession Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>