force-app/main/default/objects/IndividualApplication/fields/Total_Applied_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Applied_Income__c</fullName>
    <label>Total Applied Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>