force-app/main/default/objects/IndividualApplication/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>