force-app/main/default/objects/IndividualApplication/fields/Unit_Floor__c.field-meta.xml
<CustomField>
    <fullName>Unit_Floor__c</fullName>
    <formula>Unit__r.Floor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Floor</label>
    <type>Text</type>
</CustomField>