force-app/main/default/objects/IndividualApplication/fields/Unit_Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Offered_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Offered Date</label>
    <type>Date</type>
</CustomField>