force-app/main/default/objects/IndividualApplication/fields/Update_Owner_to_Service_User__c.field-meta.xml
<CustomField>
    <fullName>Update_Owner_to_Service_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to update the Owner Id field from created user to HCR Service Account User. Once this flag is marked as true, a flow is triggered to update the owner.</description>
    <label>Update Owner to Service User</label>
    <type>Checkbox</type>
</CustomField>