force-app/main/default/objects/IndividualApplication/fields/Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Waitlist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Waitlist</label>
    <referenceTo>Waitlist__c</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>