force-app/main/default/objects/IndividualApplication/fields/Waitlist_Applicant_Number__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Applicant_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist Applicant Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>