force-app/main/default/objects/IndividualApplication/fields/Waitlist_Name_Prior_to_Move__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Name_Prior_to_Move__c</fullName>
    <description>This field stores if the waitlist 1 is moved or waitlist 2 is getting moved, this field will store values: Waitlist__c / Waitlist_2__c</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist Name Prior to Move</label>
    <length>100</length>
    <type>Text</type>
</CustomField>