force-app/main/default/objects/IndividualApplication/fields/Waitlist_Prior_to_Move__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Prior_to_Move__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist Prior to Move</label>
    <length>100</length>
    <type>Text</type>
</CustomField>