force-app/main/default/objects/IndividualApplication/fields/WaitlistEligible__c.field-meta.xml
<CustomField>
    <fullName>WaitlistEligible__c</fullName>
    <formula>NOT(OR(AcceptedCount__c = 1,ApplicantCount__c = RejectedCount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WaitlistEligible</label>
    <type>Checkbox</type>
</CustomField>