force-app/main/default/objects/IndividualApplication/recordTypes/HCR_Applicant.recordType-meta.xml
<RecordType>
    <fullName>HCR_Applicant</fullName>
    <active>true</active>
    <label>HCR Applicant</label>
</RecordType>