force-app/main/default/objects/IndividualApplication/recordTypes/Mitchell_Lama.recordType-meta.xml
<RecordType>
    <fullName>Mitchell_Lama</fullName>
    <active>true</active>
    <label>Mitchell Lama</label>
</RecordType>