force-app/main/default/objects/IndividualApplication/recordTypes/Percentage_4_9.recordType-meta.xml
<RecordType>
    <fullName>Percentage_4_9</fullName>
    <active>true</active>
    <label>4% 9%</label>
</RecordType>