force-app/main/default/objects/IndividualApplication/recordTypes/Succession_Application.recordType-meta.xml
<RecordType>
    <fullName>Succession_Application</fullName>
    <active>true</active>
    <description>ML - Succession Application is to be used for existing renters to extend or transfer their agreement to someone else</description>
    <label>Succession Application</label>
</RecordType>