force-app/main/default/objects/IndividualApplication/recordTypes/Switch_Application.recordType-meta.xml
<RecordType>
    <fullName>Switch_Application</fullName>
    <active>true</active>
    <description>Switch Application for an Applicant Waitlist change</description>
    <label>Switch Application</label>
</RecordType>