force-app/main/default/objects/IndividualApplication/validationRules/Lease_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_Terms</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Moved In&quot;) &amp;&amp;  
( ISBLANK(Lease_Start_Date__c)  ||
ISBLANK( TEXT(Lease_Term__c) ))</errorConditionFormula>
    <errorMessage>Please enter values for Lease Start Date, Lease Term and Lease End Date, when you select Application Status as &quot;Moved In&quot;</errorMessage>
</ValidationRule>