force-app/main/default/objects/IndividualApplication/listViews/All_Applications.listView-meta.xml
<ListView>
    <fullName>All_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Primary_Applicant__c</columns>
    <columns>AppliedDate</columns>
    <columns>Status</columns>
    <columns>Waitlist__c</columns>
    <columns>ApplicationType</columns>
    <columns>LastModifiedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Applications</label>
</ListView>