force-app/main/default/objects/IndividualApplication/listViews/Ineligible_Applications.listView-meta.xml
<ListView>
    <fullName>Ineligible_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Ineligible,Rejected</value>
    </filters>
    <label>Ineligible/Rejected Applications</label>
</ListView>